--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.12.1",
     "axios": "^0.21.1",
-    "chart.js": "2.9.3",
+    "chart.js": "^2.9.3",
     "classnames": "2.2.6",
     "moment": "2.24.0",
     "node-sass": "4.13.1",
     "nouislider": "14.1.1",
     "react": "^16.12.0",
-    "react-chartjs-2": "2.9.0",
+    "react-chartjs-2": "^2.9.0",
     "react-copy-to-clipboard": "5.0.2",
     "react-datetime": "2.16.3",
     "react-dom": "^16.12.0",
